<resources>
    <string name="app_name">Notes 1.11</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="note_details">Note details:</string>
    <string name="change_text">…</string>
    <string name="about">© Yuri Dyachenko, Geek Brains student (2021)</string>
    <string name="nothing_found">Nothing found</string>
    <string name="use_google_auth_editor">Use Google Authentication</string>
    <string name="apply">Apply</string>
    <string name="save_changes">Save changes</string>
    <string name="hint_title">title:</string>
    <string name="hint_body">body:</string>
    <string name="hint_created">created:</string>
    <string name="action_add_note">Add new note</string>
    <string name="action_clear">Delete all notes</string>
    <string name="action_edit_note">Edit note</string>
    <string name="action_delete_note">Delete note</string>
    <string name="continue_text">continue</string>
    <string name="sign_out">sign out</string>
    <string name="no_email">\? e-mail ?</string>
    <string name="ask">Answer the question</string>
    <string name="delete_all_notes">Delete all notes?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="delete_note">Delete note?</string>
    <string name="use_yes_no_fragment">Use YES/NO Fragment</string>
    <string name="use_dialog_note_fragment">Use DIALOG note Fragment</string>
</resources>