<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/edit_whole_padding"
    android:alpha="@dimen/settings_alpha"
    android:background="@color/about_background"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/settings_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/use_google_auth_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_padding"
            android:text="@string/use_google_auth_editor"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/settings_text_size" />

        <CheckBox
            android:id="@+id/use_yes_no_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_padding"
            android:text="@string/use_yes_no_fragment"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/settings_text_size" />

        <Button
            android:id="@+id/settings_apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/settings_padding"
            android:text="@string/apply" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>